# Inbox-Client

./: .gitignore  README.md  component.md  main.py  output.csv  pull_request_template.md  pyproject.toml
.circleci/: config.yml
.github/: bug_report_template.md  feature_request_template.md
src/: crawler.py  dummy_ai_client.py  save_to_csv.py
src/ai_client/: pyproject.toml
src/ai_client/src/: __init__.py
src/ai_client_impl/: pyproject.toml
src/ai_client_impl/src/ai_client_impl/: __init__.py  _impl.py  conversation.py
src/ai_conversation_client/: .gitignore  README.md  __init__.py  cli.py  client.py  component.md  conversation.py  gemini_api_client.py  interface.py  main.py  pyproject.toml
src/ai_conversation_client/.circleci/: config.yml
src/ai_conversation_client/ai_conversation_client/: cli.py  gemini_api_client.py  interface.py
src/ai_conversation_client/src/ai_conversation_client/: __init__.py  cli.py  client.py  conversation.py  gemini_api_client.py  interface.py
src/ai_conversation_client/tests/: dummy_api_client.py  test_client.py
src/email_analysis/: README.md  pyproject.toml
src/email_analysis/src/: __init__.py
src/email_analysis/src/email_analysis/: __init__.py
src/email_analysis_api/: pyproject.toml
src/email_analysis_impl/: README.md  _impl.py  pyproject.toml
src/email_analysis_impl/src/: pyproject.toml
src/email_analysis_impl/src/email_analysis_impl/: __init__.py  _impl.py
src/inbox_client/: pyproject.toml
src/inbox_client/src/inbox_client/: __init__.py
src/inbox_client_api/: README.md  pyproject.toml
src/inbox_client_api/src/: __init__.py
src/inbox_client_api/src/inbox_client_api/: __init__.py
src/inbox_client_impl/: README.md  _impl.py  pyproject.toml
src/inbox_client_impl/src/inbox_client_impl/: __init__.py  _impl.py  constants.py
src/inbox_client_impl/src/tests/: test_inbox_client.py
src/inbox_client_protocol/: pyproject.toml
src/inbox_client_protocol/src/inbox_client_protocol/: __init__.py
src/message/: README.md  pyproject.toml
src/message/src/: __init__.py
src/message/src/message/: __init__.py
src/message_impl/: README.md  _impl.py  pyproject.toml
src/message_impl/src/message_impl/: __init__.py  _impl.py
src/message_impl/src/tests/: test_message.py
tests/: test_save_to_csv.py  tests_crawler.py
tests/analyzer/: test_mock_analyzer.py
tests/client/: mock_client.py  test_client.py  test_mock_client.py
tests/e2e/: test_e2e.py  test_e2e_main.py
tests/email_analysis/: test_gmail_client.py  test_gmail_message.py  test_llm_analyzer.py  test_mock_email_analysis.py
tests/integration/: test_ai_client.py  test_client.py  test_inboxclient_message.py  test_integration.py
tests/message/: mock_message.py  test_mock_message.py
tests/mock_message_tests/: __init__.py  test_mock_message.py
