[project]
name = "inbox-client"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "coverage[toml]",
]
dev = [
    "inbox-client[test]",
    "ruff",
    "mypy",
    "hatch",
    "pytest",
    "mypy",
    "git-filter-repo"
]


# --- HATCH --- TODO: FIX
[tool.hatch.envs.test]
dependencies = [
    "inbox-client[test]", 
    "pytest",
    "pytest-cov",
    "coverage[toml]",
]

[tool.hatch.envs.test.scripts]
# Example script definition
cov = "pytest --cov=src --cov-report=term-missing {args:.}"
no-cov = "pytest {args:.}"
# Default script when running 'hatch run test' or 'hatch test'
_ = "cov"
# --- HATCH ---


# --- BUILDING ---
# No build system needed
# !!Root is Not a Buildable Python Package!!
# --- BUILDING ---


# --- RUFF ---
[tool.ruff]
line-length = 88  # Default formatting width
target-version = "py311"  # Adjust based on actual Python version

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "INP001",  # Ignore missing __init__.py for namespace packages
    "D100",  # Ignore missing module-level docstrings
    "D203", "D211",  # Conflicting rules about blank lines before class
    "D212", "D213",  # Conflicting rules about multi-line docstrings
    "S101",  # Ignore assert usage in tests
    "T201",  # Ignore print statements in Logger component
    "COM812",  # Suggested by ruff to disable it to avoid unexpected behavior
    "PIE790", # Ignore unnecessary pass statement in interfaces
    "ANN401", # Ignore dynamically typed expression are disallowed in interfaces
    "F401", # Module imported but unused
    "F823", # Local variable name shadows a built-in name
    "PLR2004", # Too many branches
    "ERA001", # File is not encoded with UTF-8
    "F841", # Local variable assigned but not used
    "F821", # Undefined name
    "PGH003", # Use specific rule codes when ignoring type issues
    "I001", # Import block is un-sorted or un-formatted
    "N806", # We use camelCase
]


[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "ANN001", "ANN201"]
# --- RUFF ---



# --- WORKSPACE ---
[tool.uv.workspace]
members = [
    "src/inbox_client_protocol",
    "src/inbox_client_impl",
    "src/message",
    "src/message_impl"
]
# --- WORKSPACE ---



# --- PYTEST ---
[tool.pytest.ini_options]
pythonpath = [
    ".",
    "src",
    "tests/integration/",
    "tests/e2e"
    ]
testpaths = ["tests", "src"] # Include src/*/*/tests directories
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
# --- PYTEST ---



# --- MYPY ---
[tool.mypy]
strict = true
explicit_package_bases = true
mypy_path = [
    "src/inbox_client_protocol/src",
    "src/inbox_client_impl/src",
    "src/message/src",
    "src/message_impl/src",
]
# --- MYPY ---



# --- COVERAGE ---
[tool.coverage.report]
# Lines to exclude from coverage statistics
exclude_lines = [
    "pragma: no cover",          # Standard pragma for excluding lines
    "raise NotImplementedError", # Exclude lines raising this error
    "if TYPE_CHECKING:",
    "Protocol", # Don't require coverage for Protocol definitions
    "@abstractmethod",
]
# --- COVERAGE ---