[project]
name = "python-template-repo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "pytest>=8.3.5",
    "pytest-cov",
    "ruff",
    "mypy",
    "requests",
    "python-dotenv",
    "google-generativeai"
]

[tool.ruff]
line-length = 100
exclude = ["tests/snapshots"]

[tool.mypy]
strict = true

[dependency-groups]
dev = [
    "types-requests>=2.32.0.20250328",
]
