[project]
name = "email-analysis-api"
version = "0.1.0"
description = "Email Analyzer Protocol"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "message",
]
  
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
message = { workspace = true }