[project]
name = "inbox-client-api"
version = "0.1.0"
description = "Inbox Client Protocol"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "message",
]
  
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
message = { workspace = true }