[project]
name = "inbox_client_impl"
version = "0.1.0"
description = "Gmail Inbox Client Implementation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "inbox-client-protocol",
    "message",
    "message-impl",
]
  
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
message = { workspace = true }
message-impl = { workspace = true }
inbox-client-protocol = { workspace = true }
